--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "lodash-es": "^4.17.15",
     "v-tooltip": "^2.0.3",
     "vue": "^2.6.11",
     "vuex": "^3.5.1"
